fix for low contrast and hidden text in daqi.

--- a/src/client/assets/stylesheets/sass/components/_daqitable.scss
+++ b/src/client/assets/stylesheets/sass/components/_daqitable.scss
@@ -63,24 +63,11 @@ svg|foreignObject {
 }
 
 @media(forced-colors: active) {
-  .daqi-selected,.aq-forecast-dd.daqi-tag--2 {
+  .daqi-selected {
     // stylelint-disable-next-line declaration-no-important
       background-color: #ffffff !important;
       forced-color-adjust: none;
       color: #000000;
-  }
-
-  .aq-forecast-item {
-    .aq-forecast-dd.daqi-tag--2 {
-      border-right: 2px solid #000000;  
-      width: 100%;          
-    } 
-  }
-
- .aq-forecast-item:last-child { 
-  .aq-forecast-dd.daqi-tag--2 {
-      border-right: 1px solid #ffffff; 
-   } 
   }
 }
 
